[UPDATE]: adjust aditional css

--- a/front/index.html
+++ b/front/index.html
@@ -34,150 +34,150 @@
             </section>
             <section class="content">
                 <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
+                    <div class="questions__data">
+                        <h4 class="questions__name" id="nameQuestion">
+                            Alejandro Palacios
+                        </h4>
+                        <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
+                        <p>Fecha:
+                            <span class="questions__date" id="dateQuestion">12/01/21</span>
+                        </p>
+                    </div>
                     <h2 class="questions__question">
                         ¿Cúal es resultado de la suma de 2 +2?
                     </h2>
                 </div>
                 <hr>
                 <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
+                    <div class="answers__data">
+                        <h4 class="answers__name" id="nameAnswer">
+                            Kevin Palacios
+                        </h4>
+                        <h4>
+                            &nbspha respondido esto el
+                            <span class="answers__date">13/01/21</span>
+                        </h4>
+                    </div>
                     <h3 class="answers__answer">
                         El resultado de esa suma es 4.
                     </h3>
                 </div>
                 <hr>
                 <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
+                    <div class="questions__data">
+                        <h4 class="questions__name" id="nameQuestion">
+                            Alejandro Palacios
+                        </h4>
+                        <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
+                        <p>Fecha:
+                            <span class="questions__date" id="dateQuestion">12/01/21</span>
+                        </p>
+                    </div>
                     <h2 class="questions__question">
                         ¿Cúal es resultado de la suma de 2 +2?
                     </h2>
                 </div>
                 <hr>
                 <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
+                    <div class="answers__data">
+                        <h4 class="answers__name" id="nameAnswer">
+                            Kevin Palacios
+                        </h4>
+                        <h4>
+                            &nbspha respondido esto el
+                            <span class="answers__date">13/01/21</span>
+                        </h4>
+                    </div>
                     <h3 class="answers__answer">
                         El resultado de esa suma es 4.
                     </h3>
                 </div>
                 <hr>
                 <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
+                    <div class="questions__data">
+                        <h4 class="questions__name" id="nameQuestion">
+                            Alejandro Palacios
+                        </h4>
+                        <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
+                        <p>Fecha:
+                            <span class="questions__date" id="dateQuestion">12/01/21</span>
+                        </p>
+                    </div>
                     <h2 class="questions__question">
                         ¿Cúal es resultado de la suma de 2 +2?
                     </h2>
                 </div>
                 <hr>
                 <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
+                    <div class="answers__data">
+                        <h4 class="answers__name" id="nameAnswer">
+                            Kevin Palacios
+                        </h4>
+                        <h4>
+                            &nbspha respondido esto el
+                            <span class="answers__date">13/01/21</span>
+                        </h4>
+                    </div>
                     <h3 class="answers__answer">
                         El resultado de esa suma es 4.
                     </h3>
                 </div>
                 <hr>
                 <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
+                    <div class="questions__data">
+                        <h4 class="questions__name" id="nameQuestion">
+                            Alejandro Palacios
+                        </h4>
+                        <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
+                        <p>Fecha:
+                            <span class="questions__date" id="dateQuestion">12/01/21</span>
+                        </p>
+                    </div>
                     <h2 class="questions__question">
                         ¿Cúal es resultado de la suma de 2 +2?
                     </h2>
                 </div>
                 <hr>
                 <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
+                    <div class="answers__data">
+                        <h4 class="answers__name" id="nameAnswer">
+                            Kevin Palacios
+                        </h4>
+                        <h4>
+                            &nbspha respondido esto el
+                            <span class="answers__date">13/01/21</span>
+                        </h4>
+                    </div>
                     <h3 class="answers__answer">
                         El resultado de esa suma es 4.
                     </h3>
                 </div>
                 <hr>
                 <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
+                    <div class="questions__data">
+                        <h4 class="questions__name" id="nameQuestion">
+                            Alejandro Palacios
+                        </h4>
+                        <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
+                        <p>Fecha:
+                            <span class="questions__date" id="dateQuestion">12/01/21</span>
+                        </p>
+                    </div>
                     <h2 class="questions__question">
                         ¿Cúal es resultado de la suma de 2 +2?
                     </h2>
                 </div>
                 <hr>
                 <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
-                    <h3 class="answers__answer">
-                        El resultado de esa suma es 4.
-                    </h3>
-                </div>
-                <hr>
-                <div class="questions">
-                    <h4 class="questions__name" id="nameQuestion">
-                        Alejandro Palacios
-                    </h4>
-                    <h5 class="questions__category" id="categoryQuestion">Técnica</h5>
-                    <p>Fecha:</p>
-                    <p class="questions__date" id="dateQuestion">12/01/21</p>
-                    <h2 class="questions__question">
-                        ¿Cúal es resultado de la suma de 2 +2?
-                    </h2>
-                </div>
-                <hr>
-                <div class="answers">
-                    <h4 class="answers__name" id="nameAnswer">
-                        Kevin Palacios
-                    </h4>
-                    <h4>
-                        ha respondido esto el
-                    </h4>
-                    <p class="answers__date">13/01/21</p>
+                    <div class="answers__data">
+                        <h4 class="answers__name" id="nameAnswer">
+                            Kevin Palacios
+                        </h4>
+                        <h4>
+                            &nbspha respondido esto el
+                            <span class="answers__date">13/01/21</span>
+                        </h4>
+                    </div>
                     <h3 class="answers__answer">
                         El resultado de esa suma es 4.
                     </h3>
@@ -190,73 +190,97 @@
                         CATEGORIAS
                     </h2>
                     <div class="category">
-                        <h3 class="title">
-                            <a href="">Técnica</a>
-                        </h3>
-                        <h5 class="info">
-                            <p id="quantity">2</p>
-                            <p id="word">Preguntas</p>
-                        </h5>
+                        <div class="title">
+                            <h3>
+                                <a href="">Técnica</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <p>
+                                    <span id="quantity">2</span>
+                                    preguntas
+                                </p>
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="" alt="logo de categoria Técnica">
+                                </figure>
+                            </div>
+                        </div>
                     </div>
-                    <div class="logo">
-                        <figure>
-                            <img src="" alt="logo de categoria Técnica">
-                        </figure>
+                    <div class="category">
+                        <div class="title">
+                            <h3>
+                                <a href="">Legal</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <p>
+                                    <span id="quantity">8</span>
+                                    preguntas
+                                </p>
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="" alt="logo de categoria Legal">
+                                </figure>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <h3 class="title">
-                            <a href="">Legal</a>
-                        </h3>
-                        <h5 class="info">
-                            <p id="quantity">4</p>
-                            <p id="word">Preguntas</p>
-                        </h5>
+                    <div class="category">
+                        <div class="title">
+                            <h3>
+                                <a href="">Administrativa</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <p>
+                                    <span id="quantity">5</span>
+                                    preguntas
+                                </p>
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="" alt="logo de categoria Administrativa">
+                                </figure>
+                            </div>
+                        </div>
                     </div>
-                    <div class="logo">
-                        <figure>
-                            <img src="" alt="logo de categoria legal">
-                        </figure>
+                    <div class="category">
+                        <div class="title">
+                            <h3>
+                                <a href="">Económica</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <p>
+                                    <span id="quantity">2</span>
+                                    preguntas
+                                </p>
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="" alt="logo de categoria Económica">
+                                </figure>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <h3 class="title">
-                            <a href="">Administrativa</a>
-                        </h3>
-                        <h5 class="info">
-                            <p id="quantity">7</p>
-                            <p id="word">Preguntas</p>
-                        </h5>
+                    <div class="information__last">
+                        <h2 class="title">
+                            ULTIMA PREGUNTA
+                        </h2>
+                        <div class="info">
+                            <p id="lastQuestion">¿Cuánto es 2+2?</p>
+                            <a href="">Ver pregunta</a>
+                        </div>
                     </div>
-                    <div class="logo">
-                        <figure>
-                            <img src="" alt="logo de categoria Administrativa">
-                        </figure>
-                    </div>
-                    <div>
-                        <h3 class="title">
-                            <a href="">Económica</a>
-                        </h3>
-                        <h5 class="info">
-                            <p id="quantity">9</p>
-                            <p id="word">Preguntas</p>
-                        </h5>
-                    </div>
-                    <div class="logo">
-                        <figure>
-                            <img src="" alt="logo de categoria Económica">
-                        </figure>
-                    </div>
-                </div>
-                <div class="information__last">
-                    <h2 class="title">
-                        ULTIMA PREGUNTA
-                    </h2>
-                    <div class="info">
-                        <p id="lastQuestion">¿Cuánto es 2+2?</p>
-                        <a href="">Ver pregunta</a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <script src="./logic.js"></script>
+                </section>
+            </main>
+            <script src="./logic.js"></script>
+        </body>
     </body>
 </html>
