[UPDATE] deploy updates

--- a/front/index.html
+++ b/front/index.html
@@ -61,7 +61,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="y">Técnica</a>
+                                <a href="./views/tecnica.html" class="y">Técnica</a>
                             </h3>
                         </div>
                         <div class="info">
