--- a/front/index.html
+++ b/front/index.html
@@ -61,6 +61,24 @@
                     <div class="category">
                         <div class="title">
                             <h3>
+                                <a href="./front/" class="">Todas</a>
+                            </h3>
+                        </div>
+                        <div class="info">
+                            <h5>
+                                <span id="todas"></span>
+                                preguntas
+                            </h5>
+                            <div class="logo">
+                                <figure>
+                                    <img src="./images/expand.png" alt="logo de categoria Todos">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="title">
+                            <h3>
                                 <a href="./views/tecnica.html" class="y">Técnica</a>
                             </h3>
                         </div>
@@ -79,7 +97,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="p">Legal</a>
+                                <a href="./views/legal.html" class="p">Legal</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -97,7 +115,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="g">Administrativa</a>
+                                <a href="./views/admin.html" class="g">Administrativa</a>
                             </h3>
                         </div>
                         <div class="info">
@@ -115,7 +133,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="" class="r">Económica</a>
+                                <a href="./views/econo.html" class="r">Económica</a>
                             </h3>
                         </div>
                         <div class="info">
