--- a/front/index.html
+++ b/front/index.html
@@ -61,7 +61,7 @@
                     <div class="category">
                         <div class="title">
                             <h3>
-                                <a href="./front/" class="">Todas</a>
+                                <a href="/front/index.html" class="">Todas</a>
                             </h3>
                         </div>
                         <div class="info">
