[UPDATE] add loading spinner

--- a/front/index.html
+++ b/front/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:title" content="Pregunta Repo">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="">
-        <meta property="og:image" content="./images/action.png">
-        <link rel="stylesheet" href="./styles/styles.css">
-        <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta property="og:title" content="Pregunta Repo"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:url" content=""/>
+        <meta property="og:image" content="./images/action.png"/>
+        <link rel="stylesheet" href="./styles/styles.css"/>
+        <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com"/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
         <title>Pregunta Repo</title>
     </head>
     <body>
+        <div class="" id="loading">
+            <div class="loading">
+                <div class="spin"></div>
+            </div>
+        </div>
         <header>
             <div class="header__title">
                 <h1>Pregunta Repo</h1>
